# WATCHDOG_SERVICE

./: .gitignore  CMakeLists.txt  README.md  main.cpp  monitObject.cpp  monitObject.h  objParams.cpp  objParams.h  settings.json  simple.sem
